# streamlit-fastapi-auth-gcp

./: .gitignore  README.md  fastapi_server.py  pyproject.toml  streamlit_app.py
terraform/: main.tf  variables.tf
